--- a/fronted-mejor/sobre_nosotros.html
+++ b/fronted-mejor/sobre_nosotros.html
@@ -1,85 +1,127 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sobre Nosotros - Restaurante Mestiza</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+
   <link rel="stylesheet" href="./style/style.css">
 </head>
+
 <body class="pagina-blanca">
 
-<body>
   <header>
-   <nav class="navbar">
-    <div class="nav-left">
-      <a href="index.html" title="Inicio" class="js-link nav-text">
-        Inicio
-      </a>
-      <a href="sobre_nosotros.html" title="Sobre Nosotros" class="js-link nav-text">
-        Sobre Nosotros
-      </a>
-      <a href="opiniones.html" title="Opiniones" class="js-link nav-text">
-        Opiniones
-      </a>
-      <a href="menu.html" title="Menú" class="js-link nav-text">
-        Menú
-      </a>
-    </div>
-    <div class="nav-right">
-      <a href="reservas.html" title="Reservas" class="js-link nav-text">
-        Reservas
-      </a>
-      <a href="calendario.html" title="Calendario" class="js-link nav-text">
-        Calendario
-      </a>
-    </div>
-   </nav>
+    <nav class="navbar">
+      <div class="nav-left">
+        <a href="index.html" title="Inicio" class="js-link nav-text">Inicio</a>
+        <a href="sobre_nosotros.html" title="Sobre Nosotros" class="js-link nav-text">Sobre Nosotros</a>
+        <a href="opiniones.html" title="Opiniones" class="js-link nav-text">Opiniones</a>
+        <a href="menu.html" title="Menú" class="js-link nav-text">Menú</a>
+      </div>
+      <div class="nav-right">
+        <a href="reservas.html" title="Reservas" class="js-link nav-text">Reservas</a>
+        <a href="calendario.html" title="Calendario" class="js-link nav-text">Calendario</a>
+      </div>
+    </nav>
   </header>
-  <main>
-    <div class="container my-5">
-      <section>
-        <h1 class="text-center">Sobre Nosotros</h1>
-        <p>
-          Mestiza Sabores Caseros nació en Colonia del Sacramento en plena pandemia de 2020, cuando Daniel Abbona y su
-          familia decidieron transformar la incertidumbre en oportunidad. Lo que comenzó con una simple mesita en la
-          feria de los domingos, hoy es un emprendimiento gastronómico que se ha convertido en infaltable en ferias,
-          eventos y encuentros locales.
-        </p>
-        <p>
-          Nuestro diferencial está en la artesanía y el corazón familiar que ponemos en cada plato. Elaboramos todo
-          nosotros mismos: desde las tortillas y encurtidos hasta las salsas picantes y aderezos que acompañan nuestros
-          tacos, smash burgers, bocatas y opciones vegetarianas y veganas. Cada bocado busca mantener un sabor único,
-          constante y reconocible, que represente quiénes somos.
-        </p>
-        <p>
-          De la feria y la rambla pasamos a tener nuestro propio food truck, el primero en Colonia, que nos permitió
-          ampliar la propuesta con hamburguesas de estilo americano y seguir creciendo junto a la comunidad que nos
-          apoya.
-        </p>
-        <p>
-          Hoy seguimos recorriendo ferias gastronómicas y cerveceras, ofreciendo delivery cuando no estamos en eventos,
-          y acompañando también a familias, amigos y empresas en celebraciones privadas.
-        </p>
-        <p>
-          Mestiza es eso: comida rápida hecha con cariño, tradición y el sabor casero de Uruguay, que creció desde lo
-          simple para convertirse en un lugar de encuentro y disfrute.
-        </p>
-      </section>
-    </div>
-  </main>
-<footer>
-  <p>Bazzurro 1747 esq. B. Manton, Colonia Del Sacramento, Colonia, Uruguay 70000</p>
-  <p>+598 98 107 643</p>
-  <p>&copy; 2025 Mestiza Street Food</p>
-  <div class="social-media">
-    <a href="https://www.instagram.com/mestiza_street_food/" target="_blank">
-      <img src="./imagenes/instagram.png" alt="Instagram" class="social-icon">
-    </a>
-    <a href="https://www.facebook.com/p/mestiza_sabores_caseros-100036866965455/?_rdr" target="_blank">
-      <img src="./imagenes/facebook.png" alt="Facebook" class="social-icon">
-    </a>
-  </div>
-</footer>
 
+  <main class="container py-5 mt-5">
+
+    <section class="text-center mb-5">
+      <div class="row align-items-center mb-5 gx-5">
+        <div class="col-md-6 mb-4 mb-md-0">
+          <h2 class="h3 fw-bold mb-3 titulo-degrade">Un Sueño Nacido en 2020</h2>
+          <p>
+            Mestiza Sabores Caseros nació en Colonia del Sacramento en plena pandemia de 2020, cuando Daniel Abbona y su
+            familia decidieron transformar la incertidumbre en oportunidad. Lo que comenzó con una simple mesita en la
+            feria de los domingos, hoy es un emprendimiento gastronómico que se ha convertido en infaltable en ferias,
+            eventos y encuentros locales.
+          </p>
+          <p>
+            Nuestro diferencial está en la artesanía y el corazón familiar que ponemos en cada plato. Elaboramos todo
+            nosotros mismos: desde las tortillas y encurtidos hasta las salsas picantes y aderezos que acompañan
+            nuestros
+            tacos, smash burgers, bocatas y opciones vegetarianas y veganas. Cada bocado busca mantener un sabor único,
+            constante y reconocible, que represente quiénes somos.
+          </p>
+        </div>
+        <div class="col-md-6">
+          <img src="./imagenes/inicio.heic" alt="Mesita de feria y puesto inicial de Mestiza"
+            class="img-fluid rounded shadow-lg">
+        </div>
+      </div>
+
+      <hr class="my-5">
+
+      <div class="row align-items-center mb-5 gx-5">
+        <div class="col-md-6 order-md-2 mb-4 mb-md-0">
+          <h2 class="h3 fw-bold mb-3 titulo-degrade">El Primer Food Truck de Colonia</h2>
+          <p>
+            De la feria y la rambla pasamos a tener nuestro propio food truck, el primero en Colonia, que nos permitió
+            ampliar la propuesta con hamburguesas de estilo americano y seguir creciendo junto a la comunidad que nos
+            apoya.
+          </p>
+          <p>
+            Hoy seguimos recorriendo ferias gastronómicas y cerveceras, ofreciendo delivery cuando no estamos en
+            eventos,
+            y acompañando también a familias, amigos y empresas en celebraciones privadas.
+          </p>
+        </div>
+        <div class="col-md-6 order-md-1">
+          <img src="./imagenes/puesto.webp" alt="Food Truck Mestiza en un evento" class="img-fluid rounded shadow-lg">
+        </div>
+      </div>
+
+      <hr class="my-5">
+
+      <div class="row mb-5">
+        <div class="col-12 text-center">
+          <h2 class="h3 fw-bold mb-4 titulo-degrade">Un Lugar de Encuentro y Disfrute</h2>
+          <p class="fs-5 mx-auto" style="max-width: 800px;">
+            Mestiza es eso: comida rápida hecha con cariño, tradición y el sabor casero de Uruguay, que creció desde lo
+            simple para convertirse en un lugar de encuentro y disfrute.
+          </p>
+          <img src="./imagenes/compartiendo.png" alt="Mesa de clientes compartiendo comida"
+            class="img-fluid rounded shadow-lg mt-4" style="max-height: 400px; object-fit: cover;">
+        </div>
+      </div>
+
+      <hr class="my-5">
+
+  </main>
+
+  <section class="mapa-ubicacion">
+    <div class="container-fluid p-0">
+      <div class="row g-0">
+        <div class="col-12">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d1645.1837404949904!2d-57.850693372300775!3d-34.44281843251008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzTCsDI2JzM0LjIiUyA1N8KwNTAnNTkuMiJX!5e0!3m2!1ses-419!2suy!4v1760203959366!5m2!1ses-419!2suy"
+            width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <p>Bazzurro 1747 esq. B. Manton, Colonia Del Sacramento, Colonia, Uruguay 70000</p>
+    <p>+598 98 107 643</p>
+    <p>&copy; 2025 Mestiza Street Food</p>
+    <div class="social-media">
+      <a href="https://www.instagram.com/mestiza_street_food/" target="_blank">
+        <img src="./imagenes/instagram.png" alt="Instagram" class="social-icon">
+      </a>
+      <a href="https://www.facebook.com/p/mestiza_sabores_caseros-100036866965455/?_rdr" target="_blank">
+        <img src="./imagenes/facebook.png" alt="Facebook" class="social-icon">
+      </a>
+    </div>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
